kubernetes/argocd-apps/sabnzbd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd-route
  namespace: jellyfin
spec:
  hostnames:
    - "nzb.home"
  parentRefs:
    - name: public-gateway
      namespace: kube-system
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sabnzbd
          port: 80
